--- a/app/ui/dashboard/admins/admins.module.css
+++ b/app/ui/dashboard/admins/admins.module.css
@@ -28,6 +28,7 @@
   font-weight: 500;
   cursor: pointer;
   transition: background-color 0.2s ease, transform 0.2s ease;
+  margin: .77rem .62rem;
 }
 
 .button:hover:not(:disabled) {
